syntax = "proto3";

package likes;
option go_package = "github.com/ben-toogood/kite/likes";
import "google/protobuf/timestamp.proto";

service LikesService {
  rpc Count(CountRequest) returns (CountResponse);
  rpc Get(GetRequest) returns (GetResponse);
	rpc Like(LikeRequest) returns (LikeResponse);
	rpc Unlike(UnlikeRequest) returns (UnlikeResponse);
}

enum ResourceType {
  RESOURCE_TYPE_UNSPECIFIED = 0;
  RESOURCE_TYPE_POST = 1;
}

message Like {
  // e.g. post_abc
  string resource_id = 1;
  // e.g. post
  ResourceType resource_type = 2;
  // e.g. usr_abc, the user who liked the resource
  string user_id = 3;
  // when was the resource liked
  google.protobuf.Timestamp created_at = 4;
}

message CountRequest {
  ResourceType resource_type = 1;
  repeated string resource_ids = 2;
}

message CountResponse {
  map<string,int32> counts = 1;
}

message GetRequest {
  ResourceType resource_type = 1;
  repeated string resource_ids = 2;
}

message ResourceLikes {
  repeated Like likes = 1;
}

message GetResponse {
  map<string, ResourceLikes> resources = 1;
}

message LikeRequest {
  ResourceType resource_type = 1;
  string resource_id = 2;
  string user_id = 3;
}

message LikeResponse {}

message UnlikeRequest {
  ResourceType resource_type = 1;
  string resource_id = 2;
  string user_id = 3;
}

message UnlikeResponse {}